Added meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Chicago personal training"
     />
+    <meta 
+    name="keywords" 
+    content="barbell factor, personal training, fitness, gym, olympic lifting, carb cycling, periodization, workout routines, HIIT training" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
